remove deprecated items